# EquityScreener

./: .gitignore  DEPLOY.md  DEVELOPMENT_LOG.md  Estrategia.txt
.claude/: settings.local.json
.github/workflows/: daily-screener.yml
stock-screener/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
stock-screener-web/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
stock-screener-web/app/: layout.tsx  page.tsx  providers.tsx
stock-screener-web/components/: Header.tsx  ScoreCard.tsx  SectorChart.tsx  (+5 more)
stock-screener/agents/: data_analyst.md  filter_optimizer.md  portfolio_monitor.md  stock_researcher.md
stock-screener/config/: aggressive.json  conservative.json  default.json
stock-screener/database/: schema.sql
stock-screener/database/migrations/: 002_add_ai_analysis.sql  003_add_price_changes.sql
stock-screener/docs/: apis.md  strategy.md
stock-screener/scripts/: analyze_stocks.py  run_full_analysis.py  run_screener.py  run_screener_web.py
stock-screener/src/: __init__.py
stock-screener/src/analysis/: __init__.py  ai_scoring.py  analyzer.py  price_performance.py  trade_idea.py
stock-screener/src/api/: __init__.py  finviz.py  fmp.py  yahoo.py  yahoo_screener.py
stock-screener/src/core/: __init__.py  filters.py  scoring.py  screener.py
stock-screener/src/db/: __init__.py  supabase_client.py
stock-screener/src/models/: __init__.py  stock.py
stock-screener/src/utils/: __init__.py  cache.py  export.py
stock-screener/tests/: __init__.py  test_screener.py
(+23 files in other folders)
